Clean up code & finish placeholder for comments on post detail page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  padding: 20px;
+  background-color: #ggg;
+}
+
+p {
+  color: grey;
 }
